# c64_image_converter

./: .gitignore  CMakeLists.txt  README.md
Win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  c64_converter.vcxproj  c64_converter.vcxproj.filters  c64_image_converter.sln  cmake_install.cmake
src/: asmgenerator.cpp  asmgenerator.h  blockreducer.cpp  blockreducer.h  c64converter.h  dither.cpp  dither.h  main.cpp  pallet.cpp  pallet.h  preview.cpp  preview.h  scale.cpp  scale.h
